all steps completed except docker and real SMTP server

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ APP_ENV=dev
 DATABASE_URL=postgresql+psycopg2://app:app@localhost:5432/salarydb
 SMTP_HOST=localhost
 SMTP_PORT=1025
+JWT_SECRET=dev-super-secret-change-me
+JWT_EXPIRE_MINUTES=60
